# gwhosts-proxy

./: .gitignore  LICENSE.md  README.md  gwhosts.example  pyproject.toml  tox.ini
.github/workflows/: pytest.yml  ruff.yml
gwhosts/: main.py
gwhosts/dns/: __init__.py  _casts.py  _exceptions.py  _parsers.py  _serializers.py  _struct.py  _tools.py  _types.py  parser.py
gwhosts/network/: __init__.py  _casts.py  _types.py  _utils.py
gwhosts/network/ipv4/: __init__.py  _casts.py  _types.py  _utils.py
gwhosts/network/ipv6/: __init__.py  _casts.py  _types.py  _utils.py
gwhosts/performance/: __init__.py  _gc.py
gwhosts/proxy/: __init__.py  _proxy.py  _types.py
gwhosts/routes/: __init__.py  _netlink.py  _rtmsg.py
tests/: test_dns.py  test_network.py
tests/dns/: test_casts.py  test_parser.py  test_serializer.py  test_types.py
tests/network/: test_casts.py  test_types.py  test_utils.py
tests/network/ipv4/: test_casts.py  test_utils.py
tests/network/ipv6/: test_casts.py  test_utils.py
tests/performance/: test_gc.py
tests/proxy/: test_proxy.py
tests/routes/: test_netlink.py
