[build-system]
requires = ["setuptools~=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gwhosts-proxy"
authors = [{name="SharUpOff", email = "sharupoff@efstudios.org"}]
description = "DNS proxy/router for a specified list of hostnames"
readme = "README.md"
requires-python = ">=3.8, <3.13"
dependencies = ["pyroute2~=0.7.0"]
version = "1.0.0"

[project.optional-dependencies]
test = ["pytest~=7.0", "pytest-cov~=3.0"]

[project.urls]
homepage = "https://github.com/sharupoff/gwhosts-proxy"

[tool.pytest.ini_options]
addopts = "-ra -q --cov-report term-missing --cov gwhosts"

[tool.ruff]
line-length = 119
target-version = "py38"

[tool.black]
line-length = 119
target-version = ["py38"]

[tool.setuptools.packages.find]
include = ["gwhosts.*"]
